--- a/netlify.toml
+++ b/netlify.toml
@@ -2,12 +2,12 @@
 # This assumes that the Zola site is in a docs folder. If it isn't, you don't need
 # to have a `base` variable but you do need the `publish` and `command` variables.
 base    = ""
-publish = "docs/public"
+publish = "public"
 command = "zola build"
 
 [build.environment]
 # Set the version name that you want to use and Netlify will automatically use it.
-ZOLA_VERSION = "0.13.0"
+ZOLA_VERSION = "0.15.0"
 
 # The magic for deploying previews of branches.
 # We need to override the base url with whatever url Netlify assigns to our
