Added today's page
Issue: BRANCH

--- a/config.toml
+++ b/config.toml
@@ -21,4 +21,8 @@ highlight_code = true
 
 [extra]
 # Put all your custom variables here
-paginate_by = 5
+after_dark_menu = [
+    {url = "$BASE_URL", name = "Home"},
+    {url = "$BASE_URL/categories", name = "Categories"},
+    {url = "$BASE_URL/tags", name = "Tags"},
+]
